--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ APP_KEY=UzxKY3ZtU5O0spAkWueai352583DciV0
 DRIVE_DISK=local
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
