--- a/package.json
+++ b/package.json
@@ -60,14 +60,17 @@
     "youch-terminal": "^2.2.0"
   },
   "dependencies": {
+    "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.8.0",
+    "@adonisjs/drive": "^2.3.0",
     "@adonisjs/lucid": "^18.3.0",
     "@adonisjs/repl": "^3.1.0",
     "@adonisjs/session": "^6.2.0",
-    "@adonisjs/shield": "^7.0.0",
+    "@adonisjs/shield": "^7.1.0",
     "@adonisjs/view": "^6.1.0",
     "luxon": "^3.3.0",
     "mysql2": "^3.2.0",
+    "phc-argon2": "^1.1.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
